2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7

2002-08-09  Jody Goldberg <jody@gnome.org>

	* qpro-read.c (qpro_read_sheet) : make sure to queue a span recalc.

2002-08-04  Jon K Hellan  <hellan@acm.org>

	* qpro-read.c: include gutils.h.

2002-07-22  Zbigniew Chyla  <cyba@gnome.pl>

	* plugin.xml.in: Set loader type to "Gnumeric_Builtin:module".

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-07-12  Jody Goldberg <jody@gnome.org>

	* qpro-read.c (qpro_parse_formula) : add handlers for binary/unary ops,
	  cellrefs, and constants.  Still needs work for rangerefs,
	  and functions.  Could also use some testing for abs/rel and sheet
	  qualified references.

2002-07-12  Jody Goldberg <jody@gnome.org>

	* qpro-read.c (qpro_parse_formula) : make a guess about string and
	  error states.

2002-07-12  Jody Goldberg <jody@gnome.org>

	* qpro-read.c : Ok we do a few things now.
	  Sheet name, tab colour, zoom.
	  blank, int, float, string cells.
	  TODO : formulas, attributes

2002-07-10  Jody Goldberg <jody@gnome.org>

	* qpro-read.c : some initial work to make this a functional plugin and
	  to support ole based versions.  None of the records are parsed yet,
	  but we do appear to be able to read the stream smoothly now.

1999-11-17  Jeff Garzik  <jgarzik@mandrakesoft.com>

	* dump-qpro.c, qpro.h, quattro-pro.txt: Initial
	Quattro Pro import work (not yet referenced outside this dir)
